# budget-backend

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  budget-api.code-workspace  budget-backend.code-workspace  launch.py  main.py  pyproject.toml  requirements.txt  setup.cfg
app/: __init__.py  main.py
app/controllers/: __init__.py  account.py  accounts.py  authentication.py  budget.py  budgets.py  categories.py  category.py  family.py  transaction.py  transactions.py  trend.py  user.py  users.py
app/dependencies/: session.py  sessions.py  user.py
app/models/: __init__.py  account.py  budget.py  category.py  family.py  transaction.py  user.py
app/routers/: __init__.py  account.py  authentication.py  budget.py  category.py  family.py  transaction.py  trend.py  user.py
app/schemas/: account.py  authentication.py  budget.py  category.py  family.py  transaction.py  user.py
app/services/: account.py  budget.py  category.py  family.py  transaction.py  user.py
app/utilities/: callables.py  constants.py  cors.py  database.py  security.py
configurations/: .env-example  .example.env  .test.env
core/: calendar.py  databases.py  security.py  settings.py
core/databases/: sessions.py
files/database-scheme/: budget_db.sql  budget_db.webloc
migrations/: env.py  script.py.mako
migrations/versions/: 4dde9161923e_database_initialisation.py  b0d2ed6b030c_database_initialisation.py
models/: account.py  budget.py  category.py  family.py  transaction.py  user.py
models/utilities/: base.py  base_model.py  callables.py  types.py
project-files/database-scheme/: budget_db.sql
specifications/database-scheme/: budget_db.sql
tests/: conftest.py
tests/base/: router_endpoint_base_test_class.py
tests/mock/: databases.py  dependencies.py  settings.py
tests/test_app/: conftest.py  test_account_controller.py  (+7 more)
(+76 files in other folders)
