[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "budget-api"
version = "0.0.1"
description = "web API for managing & planning both of joint & personal budgets"
authors = [
    "Airat K <kamairat@icloud.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
pydantic = "^1.10.12"
PyJWT = "^2.8.0"
argon2-cffi = "^21.3.0"
python-dotenv = "^1.0.0"
SQLAlchemy = "^2.0.20"
alembic = "^1.12.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
wemake-python-styleguide = "^0.18.0"
typos = "^1.16.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"
httpx = "^0.24.1"


[tool.pytest.ini_options]
xfail_strict = true


[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]


disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true

disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

no_implicit_optional = true


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
